WEB-3025 Fixed alignment of all day checkbox

--- a/fid-web/src/main/webapp/style/site_wide.css
+++ b/fid-web/src/main/webapp/style/site_wide.css
@@ -388,6 +388,12 @@ input.wavy-underline {
     width:20px;
 }
 
+.all-day-checkbox-label {
+    margin-top: 10px;
+    float: left;
+
+}
+
 
 
 
